Fixed alignment/formatting
artwork_details' description text is now properly aligned, and should work better with mobile viewing.

--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -88,8 +88,14 @@ body {
 
 .descriptiontext {
 	color: #f9fda6;
-/*CHECK: padding with mobile site settings*/
-	padding-left: 200px;
-	padding-right: 200px;
 	font-size: 20px;
+}
+
+.detailBox {
+	padding-left: 50px;
+	padding-right: 50px;
+	max-width: 1500px;
+	margin: auto;
+	display: flex;
+	justify-content: center;
 }
